fsdemo-common-tools/istio/fsdemo-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fsdemo-frontend
  labels:
    app: fsdemo-frontend
    version: v1
  namespace: fsdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fsdemo-frontend
  template:
    metadata:
      labels:
        app: fsdemo-frontend
        version: v1
    spec:
      containers:
        - name: fsdemo-frontend
          image: registry.cn-hangzhou.aliyuncs.com/xdorg1/fsdemo-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: fsdemo-frontend
  labels:
    app: fsdemo-frontend
    service: fsdemo-frontend
  namespace: fsdemo
spec:
  type: NodePort
  selector:
    app: fsdemo-frontend
  ports:
    - port: 8080
      name: http
      targetPort: 80

---
