fsdemo-common-tools/istio/fsdemo-tas.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactionagentservice
  labels:
    app: transactionagentservice
    version: v1
  namespace: fsdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactionagentservice
  template:
    metadata:
      labels:
        app: transactionagentservice
        version: v1
    spec:
      containers:
        - name: transactionagentservice
          image: xdorg1/transactionagentservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          resources: {}
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: transactionagentservice
  labels:
    app: transactionagentservice
    service: transactionagentservice
  namespace: fsdemo
spec:
  #  type: NodePort
  selector:
    app: transactionagentservice
  ports:
    - port: 8082
      name: http
