fsdemo-common-tools/istio/fsdemo-usercenter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fsdemo-usercenter
  labels:
    app: fsdemo-usercenter
    version: v1
  namespace: fsdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fsdemo-usercenter
  template:
    metadata:
      labels:
        app: fsdemo-usercenter
        version: v1
    spec:
      containers:
        - name: fsdemo-usercenter
          image: xdorg1/fsdemo-usercenter
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: fsdemo-usercenter
  labels:
    app: fsdemo-usercenter
    service: fsdemo-usercenter
  namespace: fsdemo
spec:
#  type: NodePort
  selector:
    app: fsdemo-usercenter
  ports:
    - port: 8081
      name: http
