fsdemo-common-tools/istio/fsdemo-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fsdemo-gateway
  namespace: fsdemo
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
# assume fsdemo apps deployed in the namespace of fsdemo
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fsdemo-route
  namespace: fsdemo
spec:
  hosts:
    - "*"
  gateways:
    - fsdemo-gateway
  http:
    - match:
      - port: 80
        uri:
          prefix: "/usercenter/"
      route:
      - destination:
          host: fsdemo-usercenter.fsdemo.svc.cluster.local
          port:
            number: 8081
          subset: v1
    - match:
      - port: 80
        uri:
          prefix: "/tas/"
      route:
      - destination:
          host: fsdemo-transactionagentservice.fsdemo.svc.cluster.local
          port:
            number: 8082
          subset: v1
    - route:
      - destination:
          host: fsdemo-frontend.fsdemo.svc.cluster.local
          port:
            number: 8080
          subset: v1
        weight: 100

---
# assume fsdemo apps deployed in the namespace of fsdemo
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-dr
  namespace: fsdemo
spec:
  host: fsdemo-frontend.fsdemo.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1

---
# assume fsdemo apps deployed in the namespace of fsdemo
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: transactionagentservice-dr
  namespace: fsdemo
spec:
  host: fsdemo-transactionagentservice.fsdemo.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1

---
# assume fsdemo apps deployed in the namespace of fsdemo
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: usercenter-dr
  namespace: fsdemo
spec:
  host: fsdemo-usercenter.fsdemo.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
